<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Printer</string>
    <string name="str_checkdevice">check equipment </string>
    <string name="str_open">turn on Bluetooth</string>
    <string name="str_close">turn off Bluetooth</string>
    <string name="str_matched">View paired devices</string>
    <string name="str_openimg">open picture </string>
    <string name="str_create2d">qrcode</string>
    <string name="str_createbar">barcode</string>
    <string name="str_order">FontSize</string>
    <string name="str_scan">scanning equipment</string>
    <string name="str_printword">Print</string>
    <string name="str_printword_desc">Print GBK, Unicode text encoding</string>
    <string name="str_printimg">print pictures</string>
    <string name="str_print_order">Print by instruction</string>
    <string name="str_printimg_desc">Select the picture to print</string>
    <string name="str_printbarcode">one-dimensional code printing </string>
    <string name="str_printbarcode_desc">dynamically create a dimensional code printing </string>
    <string name="str_printqrcode">two-dimensional code printing </string>
    <string name="str_printqrcode_desc">dynamically create 2D code printing </string>
    <string name="str_printcmd">send printer instructions </string>
    <string name="str_printcmd_desc">send a print instruction set other instructions </string>
    <string name="str_disconnect">disconnect</string>
    <string name="str_device">device</string>
    <string name="str_scaning">scanning</string>
    <string name="str_unconnected">not connected!</string>
    <string name="str_succonnect">connected successfully!</string>
    <string name="str_faileconnect">connection failed!</string>
    <string name="str_lose">connection lost!</string>
    <string name="str_cannotcreate2d">create 2D failed!</string>
    <string name="str_cannotcreatebar">failed to create a one-dimensional code </string>
    <string name="str_devecehasblue">Bluetooth equipment! </string>
    <string name="str_nomatched">no matching equipment!</string>
    <string name="str_connected">connected </string>
    <string name="str_disconnected">not connected to </string>
    <string name="str_connecting">connecting to </string>
    <string name="str_hasnodevice">no Bluetooth devices! </string>
    <string name="str_scanover">scanning is finished!</string>
    <string name="chose">select</string>
    <string name="mode_bt">BT Printer</string>
    <string name="mode_wifi">Wifi Printer</string>
    <string name="mode_usb">USB Printer</string>
    <string name="str_printunicode">Print Unicode</string>
    <string name="str_exit">Sure exit and close the equipment?</string>
    <string name="str_autotime">Interval(ms):</string>
    <string name="str_autoprint">Auto Print</string>
    
    <string name="str_hintprint">Please enter a command print</string>
    
    
    <string name="str_printer_state">STATE</string>
    <string name="str_printer_printing">Printing</string>
    <string name="str_printer_lowpower">Low power</string>
    <string name="str_printer_nopaper">No paper</string>
    <string name="str_printer_bufferfull">Buffer full</string>
    <string name="str_printer_buffernull">Buffer null</string>
    <string name="str_printer_hightemperature">High temperature</string>
    
   <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
</resources>