<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_hintprint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_create2d" />

        <Button
            android:id="@+id/bt_imageQr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printimg" />

        <Button
            android:id="@+id/bt_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_print_order" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>